# prototipo_gimnasio

./: app.py  pyproject.toml
