[tool.poetry]
name = "prototipo-gimnasio"
version = "0.1.0"
description = ""
authors = ["EGAMAGZ <46827955+EGAMAGZ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlmodel = "^0.0.22"
uvicorn = "^0.32.0"
ruff = "^0.7.3"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

exclude = [".git", "__pycache__", "styles", ".vscode", ".github"]

[tool.ruff.lint]
select = [
	"F",
	"E",
	"W",
	"N",
	"UP",
	"ANN",
	"BLE",
	"A",
	"COM",
	"C4",
	"DTZ",
	"Q",
	"SLF",
	"SIM",
	"PTH",
	"I",
]
ignore = ["COM812"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
python_version = "3.11"

check_untyped_defs = true

ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true

warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

no_implicit_reexport = true
allow_redefinition = true

show_error_codes = true
